--- a/src/gui/SellerForm.fxml
+++ b/src/gui/SellerForm.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
@@ -45,11 +46,11 @@
             <Label text="Birth Date" GridPane.rowIndex="3" />
             <Label text="Base Salary" GridPane.rowIndex="4" />
             <Label text="Department" GridPane.rowIndex="5" />
-            <TextField fx:id="txtName11" GridPane.columnIndex="1" GridPane.rowIndex="5" />
             <DatePicker fx:id="dpBirthDate" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <Label fx:id="labelErrorEmail" textFill="#f80202" GridPane.columnIndex="2" GridPane.rowIndex="2" />
             <Label fx:id="labelErrorBaseSalary" textFill="#f80202" GridPane.columnIndex="2" GridPane.rowIndex="4" />
             <Label fx:id="labelErrorBirthDate" textFill="#f80202" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+            <ComboBox fx:id="comboBoxDepartment" prefHeight="30.0" prefWidth="110.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
          </children>
       </GridPane>
    </children>
